# aoc-toolkit

./: .env.example  .gitignore  LICENCE  README.md  TODO.md  logging.yaml  pyproject.toml  requirements.txt
aoc-toolkit/: __main__.py
aoc-toolkit/_data/: script.py.stub
aoc-toolkit/commands/: __init__.py  fetch.py  run.py
aoc-toolkit/services/: aoc_service.py
